--- a/app/src/main/res/layout/card_main.xml
+++ b/app/src/main/res/layout/card_main.xml
@@ -66,7 +66,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal|bottom"
-                android:textColor="#FF4081"
+                android:textColor="@color/colorAccent"
                 android:textAllCaps="true"
                 android:text="Learn more"
                 android:textAppearance="?android:attr/textAppearanceMedium"
